bench/sensitive/critical/evidence/1f63de9660f5789c899a9e3c2b3bdc5c687cf487_20260113-092917/logs/integrity_scope_verifier.log
C:\Users\shilo\Documents\GitHub\Gred-In-Compression-System\bench\sensitive\critical\integrity_scope_verifier.ts:1
import { GICSv2Encoder, GICSv2Decoder } from '../../../src/index.js';
                        ^

SyntaxError: The requested module '../../../src/index.js' does not provide an export named 'GICSv2Decoder'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:228:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:647:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.18.0
